one change more

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 target="_blank" rel="noreferrer noopener">WebStudio</a>
         </nav>
             <!-- LINK ESTUDIO -->
-            <a href="PAGE-1.html" rel="noreferrer noopener">Estudio</a>
+            <a href="index.html" rel="noreferrer noopener">Estudio</a>
 
             <!-- LINK PORTAFOLIO -->
-            <a href="PAGE-2.html" rel="noreferrer noopener">Portafolio</a>
+            <a href="index2.html" rel="noreferrer noopener">Portafolio</a>
 
             <!-- LINK CONTACTOS -->
             <a href="#Ubi_contacts" rel="noreferrer noopener">Contactos</a>
