--- a/index2.html
+++ b/index2.html
@@ -7,22 +7,22 @@
     <title>Luis Nava's project.💤</title>
     <!-- apartir de aqui empienzan los links de enlace -->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
 </head>
 <body>
     <header>
     <nav>
-
         <!-- LINK DEL WEBSITE -->
         <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiOsIGo-pX-AhWlr4QIHe26BFwQFnoECA0QAQ&url=https%3A%2F%2Fwebstudio.is%2F&usg=AOvVaw05-J3yG9q3evgk-Y-yfJlZ" rel="noreferrer noopener">WebStudio</a>
-    </nav>
+    
 
         <!-- LINKS DE ENCABEZADO  -->
-        <a href="PAGE-1.html" rel="noreferrer noopener">Estudio</a>
+        <a href="index.html" rel="noreferrer noopener">Estudio</a>
 
-        <a href="PAGE-2.html" rel="noreferrer noopener">Portafolio</a>
+        <a href="index2.html" rel="noreferrer noopener">Portafolio</a>
 
         <a href="#Ubi_contacts_2" rel="noreferrer noopener">Contactos</a>
-
+    </nav>
         <!-- LINKS DE CONTACTO -->
 
         <a href="mailto:Info@devstudo.com">Info@devstudo.com</a>
