--- a/Portafolio.html
+++ b/Portafolio.html
@@ -6,6 +6,7 @@
     <meta name="viewport" conten t="width=device-width, initial-scale=1.0">
     <title>Luis Nava's project.💤</title>
     <!-- apartir de aqui empienzan los links de enlace -->
+    <link rel="icon" type="image/png" href="images/Logo.jpeg">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style2.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
@@ -31,7 +32,7 @@
 
         <li>
 
-        <a class="Porta2" href="index2.html" rel="noreferrer noopener">Portafolio</a>
+        <a class="Porta2" href="Portafolio.html" rel="noreferrer noopener">Portafolio</a>
 
         </li>
 
