--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Luis Nava's project.💤</title>
 
     <!-- APARTIR DE AQUI VAN LOS LINKS DE ENLACE  -->
-
+    <link rel="icon" type="image/png" href="images/Logo.jpeg">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style2.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
@@ -33,7 +33,7 @@
             
             <!-- LINK PORTAFOLIO -->
             <li class="PortaUbi">
-                <a class="PortafolioTitulo" href="index2.html" rel="noreferrer noopener">Portafolio</a>
+                <a class="PortafolioTitulo" href="Portafolio.html" rel="noreferrer noopener">Portafolio</a>
             </li>
 
             <!-- LINK CONTACTOS -->
